force-app/main/default/objects/DevOps_Pull_Request__c/DevOps_Pull_Request__c.object-meta.xml
<CustomObject>
    <description>Git pull request mirrored into Salesforce.</description>
    <label>DevOps Pull Request</label>
    <nameField>
        <label>PR Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <pluralLabel>DevOps Pull Requests</pluralLabel>
</CustomObject>