force-app/main/default/objects/DevOps_Pull_Request__c/fields/Approvals_Received__c.field-meta.xml
<CustomField>
    <fullName>Approvals_Received__c</fullName>
    <label>Approvals Received</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>