force-app/main/default/objects/DevOps_Pull_Request__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <label>Author</label>
    <length>255</length>
    <type>Text</type>
</CustomField>