force-app/main/default/objects/DevOps_Pull_Request__c/fields/CI_Checks_Status__c.field-meta.xml
<CustomField>
    <fullName>CI_Checks_Status__c</fullName>
    <label>CI Checks Status</label>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Not Run</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>