force-app/main/default/objects/DevOps_Pull_Request__c/fields/Created_Date_Git__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Git__c</fullName>
    <label>Created Date (Git)</label>
    <type>DateTime</type>
</CustomField>