force-app/main/default/objects/DevOps_Pull_Request__c/fields/Mergeable__c.field-meta.xml
<CustomField>
    <fullName>Mergeable__c</fullName>
    <label>Mergeable</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>