force-app/main/default/objects/DevOps_Pull_Request__c/fields/Merged_Date__c.field-meta.xml
<CustomField>
    <fullName>Merged_Date__c</fullName>
    <label>Merged Date</label>
    <type>DateTime</type>
</CustomField>