force-app/main/default/objects/DevOps_Pull_Request__c/fields/PR_External_Id__c.field-meta.xml
<CustomField>
    <fullName>PR_External_Id__c</fullName>
    <externalId>true</externalId>
    <unique>true</unique>
    <caseSensitive>true</caseSensitive>
    <label>PR External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>