force-app/main/default/objects/DevOps_Pull_Request__c/fields/PR_Number__c.field-meta.xml
<CustomField>
    <fullName>PR_Number__c</fullName>
    <label>PR Number</label>
    <precision>9</precision>
    <scale>0</scale>
    <required>true</required>
    <type>Number</type>
</CustomField>