force-app/main/default/objects/DevOps_Pull_Request__c/fields/Reviewers__c.field-meta.xml
<CustomField>
    <fullName>Reviewers__c</fullName>
    <label>Reviewers</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>