force-app/main/default/objects/DevOps_Pull_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Changes Requested</fullName>
                </value>
                <value>
                    <fullName>Merged</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>