force-app/main/default/objects/DevOps_Pull_Request__c/fields/User_Story__c.field-meta.xml
<CustomField>
    <fullName>User_Story__c</fullName>
    <label>User Story</label>
    <referenceTo>DevOps_User_Story__c</referenceTo>
    <relationshipLabel>Pull Requests</relationshipLabel>
    <relationshipName>Pull_Requests</relationshipName>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>